deploy/k8s/daemonset.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: network-tools
  labels:
    app: network-tools
    environment: stag
spec:
  selector:
    matchLabels:
      app: network-tools
  template:
    metadata:
      labels:
        app: network-tools
        environment: stag
    spec:
      hostNetwork: true
      dnsPolicy: ClusterFirstWithHostNet
      tolerations:
        - operator: Exists
      containers:
        - name: network-tools
          image: docker.io/dockerboi99/he_k8s:latest
          imagePullPolicy: Always
          resources:
            requests:
              cpu: 10m
              memory: 32Mi
            limits:
              cpu: 500m
              memory: 256Mi
