deploy/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: he-add-api
spec:
  selector:
    app: he-add-api
  ports:
    - name: http
      port: 8080
      targetPort: http
